delete swagger and fix API response
